--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "^15.0.2",
-    "react-native": "^0.26.1"
+    "react": "^0.14.8",
+    "react-native": "^0.23.0",
+    "underscore": "^1.8.3"
   }
 }
