--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^0.14.8",
     "react-native": "^0.23.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "react-native-swiper": "^1.4.4"
   }
 }
